# personal_project

./: .env.example  .gitignore  agent_guide.md  game_demo.py  plan.md  pyproject.toml  requirements.txt  test_ui_demo.py  游戏操作指南.md
.github/workflows/: ci.yml
red_dust/: README.md  main.py  simulation.py  test_simulation.py
red_dust.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
red_dust/agents/: brain.py  personas.py  schema.py  test_agents.py
red_dust/env/: mars.py  schema.py  test_env.py
red_dust/harness/: clock.py  rand_gen.py  test_harness.py
red_dust/server/: api.py
red_dust/server/static/: app.js  index.html  styles.css
red_dust/tests/: test_integration.py
scripts/: README.md  test_api_key.py  test_llm_integration.py  test_server.py
