[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "red-dust"
version = "0.1.0"

[tool.setuptools]
packages = ["red_dust", "red_dust.agents", "red_dust.env", "red_dust.harness", "red_dust.server", "red_dust.tests"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["red_dust"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
